Descripción general de función print, invocación de funciones, argumentos en el ejemplo HolaMundo, se hace uso de Jupyter Notebook.

--- a/HolaMundo.ipynb
+++ b/HolaMundo.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "source": [
     "El nombre de la función junto con los paréntesis y los argumentos, forman la invocación de la función.\n",
-    "function_name(argument)"
+    "function_name(argument)."
    ]
   },
   {
